--- a/tab/index.html
+++ b/tab/index.html
@@ -15,6 +15,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     
 
@@ -41,27 +42,27 @@
 				    <!-- Первое окно TAB -->
 				    <div class="tab-pane active" id="input">
 									<div class="form-content">
-							 	 	 <input type="text" class="form-control input-lg" placeholder="Ваше имя">
-				    		  	<input type="text" class="form-control input-lg" placeholder="Ваш email">
+							 	 	 <input type="text" class="form-control input-lg  animated flipInX" placeholder="Ваше имя">
+				    		  	<input type="text" class="form-control next input-lg  animated flipInX" placeholder="Ваш email">
 					    	   	<p class="foget">Забыли пароль ?</p>
 						   	 <div class="sqw"></div>
 						   	 <a class="ss" href="#">Напомнить мне</a>
 				      </div>
 				      <div >
-				       <button class="button">Войти</button>
+				       <button class="button animated lightSpeedIn">Войти</button>
 				      </div>
 				     </div>
 				   <!-- Второе окно TAB -->
 				    <div class="tab-pane" id="registration">
 				 				<div class="form-content">
-				     	   <input type="text" class="form-control input-lg" placeholder="Ваш login">
-				     	   <input type="text" class="form-control input-lg" placeholder="Ваш email">
+				     	   <input type="text" class="form-control input-lg animated flipInX" placeholder="Ваш login">
+				     	   <input type="text" class="form-control next input-lg animated flipInX" placeholder="Ваш email">
 				        	<p class="foget">Забыли пароль ?</p>
 				    	 <div class="sqw"></div>
 				      	 <a class="ss" href="#">Напомнить мне</a>
 				      </div>
 				     <div >
-				      <button class="button">Зарегистрироваться</button>
+				      <button class="button animated lightSpeedIn">Зарегистрироваться</button>
 				     </div>
 				    </div>
 				  </div>
