--- a/src/index.html
+++ b/src/index.html
@@ -67,12 +67,12 @@
            <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
              <div class="main-form">
               <h2 class="main-form-header" >Для расчета точной стоимости <br>закажите <strong>выезд замерщика</strong> </h2>
-              <form action="#">
+              <form class="form" action="#">
                 <label for="#">Ваше имя</label>
-                <input class="main-form-input" type="text">
+                <input class="form-input" type="text">
                 <label for="#">Номер телефона</label>
-                <input class="main-form-input" type="text">
-                <button class="button main-form-btn" type="submit">Оставить заявку</button>
+                <input class="form-input" type="text">
+                <button class="button form-btn" type="submit">Оставить заявку</button>
                 <small>Преедем в день обращения<sup>*</sup></small>
               </form>
              </div>
@@ -218,7 +218,7 @@
         <div class="feedback-slider_item">
            <div class="row">
              <div class="col-lg-6">
-               <div class="fotorama"  data-nav="thumbs">
+               <div class="fotorama" data-width="100%" data-nav="thumbs">
                 <img src="img/feedback/photo/1.jpg">
                 <img src="img/feedback/photo/2.jpg">
                 <img src="img/feedback/photo/3.jpg">
@@ -311,7 +311,33 @@
        </div>
      
      </div>
+
+     <div class="row">
+       <div class="col-lg-8 col-lg-offset-2">
+         <div class="feedback-form">
+           <h3>Хотите так же? Оставьте Ваши контактные данные</h3>
+           <form class="form" action="#">
+
+             <div class="row">
+               <div class="col-lg-6">
+                <label for="#">Ваше имя</label>
+                <input class="form-input" type="text">
+               </div>
+
+              <div class="col-lg-6">
+                <label for="#">Номер телефона</label>
+                <input class="form-input" type="text">
+              </div>
+             </div>
+             <button class="button feedback-btn form-btn" type="submit">Оставить заявку</button>
+           </form>
+         </div><!-- feedback-form -->
+       </div><!-- col-lg-8 -->
+     </div><!-- row -->
+    </div><!-- container -->
+    <img class="hand" src="img/feedback/hand.png" alt="hand">
    </section>
+   
    
     <!-- Модальные окна -->
     <!-- Окно получить консультацию -->
@@ -324,14 +350,14 @@
           </h4>
           <p>Оставьте свои контакнтые данные <br>для связи</p>
           <div class="main-form popup-form">
-            <form action="#">
+            <form class="form" action="#">
               <label for="#">Ваше имя</label>
-              <input class="main-form-input" type="text">
+              <input class="form-input" type="text">
               <label for="#">Номер телефона</label>
-              <input class="main-form-input" type="text">
+              <input class="form-input" type="text">
               <label for="#">Сообщение</label>
-              <textarea class="main-form-input" rows="5" ></textarea>
-              <button class="button main-form-btn" type="submit">Оставить заявку</button>
+              <textarea class="form-input" rows="5" ></textarea>
+              <button class="button form-btn" type="submit">Оставить заявку</button>
             </form>
           </div>
         </div>
