--- a/src/index.html
+++ b/src/index.html
@@ -337,6 +337,197 @@
     </div><!-- container -->
     <img class="hand" src="img/feedback/hand.png" alt="hand">
    </section>
+
+
+<!-- Пятая секция Схема работы -->
+   <section class="scheme">
+    <div class="container">
+      <div class="section-header">
+        <h3>Схема работы</h3>
+        <p>Работа над вашим объектом будет включать в себя следующие этапы:</p>
+      </div> <!-- section-header -->
+
+      <div class="row">
+        <div class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-1">
+          <div class="scheme-block">
+            <img src="img/scheme/1.png" alt="">
+            <h4>Заявка</h4>
+            <p>Оставляете онлайн заявку или звоните +7 495 771 05 08</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1">
+          <div class="scheme-block">
+            <img src="img/scheme/2.png" alt="">
+            <h4>Выезд специалиста</h4>
+            <p>В течение 1 рабочего дня к Вам приезжает специалист, который выполнит замеры для точной стоимости работ</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1">
+          <div class="scheme-block">
+            <img src="img/scheme/3.png" alt="">
+            <h4>Составление договора</h4>
+            <p>Готовим договор и согласовываем с Вами</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-1">
+          <div class="scheme-block">
+            <img src="img/scheme/4.png" alt="">
+            <h4>Начало работ</h4>
+            <p>Доставляем материалы, оборудование, подписываем договор и начинаем работы</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1">
+          <div class="scheme-block">
+            <img src="img/scheme/5.png" alt="">
+            <h4>Окончание работ</h4>
+            <p>После окончания работ Вы проверяете качество и подписываете акт сдачи, производите оплату.</p>
+          </div>
+        </div> 
+      </div><!-- row -->
+
+    </div><!-- container -->
+   </section>
+
+   <!-- Шестая секция Все на 100% включено!  -->
+   <section class="all-inclusive">
+     <div class="container">
+       <div class="section-header">
+         <h2>Все на 100% включено!</h2>
+         <p>При выполнении работ с нашим материалом в стоимость входит:</p>
+       </div><!-- Section-header -->
+       <div class="row">
+         <!-- 1 -->
+         <div class="col-lg-3">
+           <div class="media">
+            <div class="media-left">
+              <span class="circle-border">
+                <span class="circle">
+                  1.
+                </span>
+              </span>                           
+            </div><!-- media-left -->
+            <div class="media-body">
+              <h4 class="media-heading">Материал:</h4>
+              <p>штукатурка, грунтовка или бетоноконтакт, маяки, сетка на стыки</p>
+            </div><!-- media-body -->
+          </div><!-- media -->
+         </div><!-- col-lg-3 -->
+         <!-- 2 -->
+          <div class="col-lg-3">
+            <div class="media">
+              <div class="media-left">
+                <span class="circle-border">
+                  <span class="circle">
+                    2.
+                  </span>
+                </span>
+              </div><!-- media-left -->
+              <div class="media-body">
+                <h4 class="media-heading">Доставка оборудования и материала на объект</h4>
+                <p></p>
+              </div><!-- media-body -->
+            </div><!-- media -->
+          </div>
+          <!-- 3 -->
+           <div class="col-lg-3">
+             <div class="media">
+               <div class="media-left">
+                 <span class="circle-border">
+                   <span class="circle">
+                     3.
+                   </span>
+                 </span>
+               </div><!-- media-left -->
+               <div class="media-body">
+                 <h4 class="media-heading">Подготовка поверхности</h4>
+                 <p>(очистка, грунтование)</p>
+               </div><!-- media-body -->
+             </div><!-- media -->
+           </div>
+           <!-- 4 -->
+            <div class="col-lg-3">
+              <div class="media">
+                <div class="media-left">
+                  <span class="circle-border">
+                    <span class="circle">
+                      4.
+                    </span>
+                  </span>
+                </div><!-- media-left -->
+                <div class="media-body">
+                  <h4 class="media-heading">Установка маяков</h4>
+                  <p></p>
+                </div><!-- media-body -->
+              </div><!-- media -->
+            </div>
+            <!-- 5 -->
+             <div class="col-lg-3">
+               <div class="media">
+                 <div class="media-left">
+                   <span class="circle-border">
+                     <span class="circle">
+                       5.
+                     </span>
+                   </span>
+                 </div><!-- media-left -->
+                 <div class="media-body">
+                   <h4 class="media-heading">Оштукатуривание поверхности</h4>
+                   <p></p>
+                 </div><!-- media-body -->
+               </div><!-- media -->
+             </div>
+             <!-- 6 -->
+              <div class="col-lg-3">
+                <div class="media">
+                  <div class="media-left">
+                    <span class="circle-border">
+                      <span class="circle">
+                        6.
+                      </span>
+                    </span>
+                  </div><!-- media-left -->
+                  <div class="media-body">
+                    <h4 class="media-heading">Удаление маяков</h4>
+                    <p></p>
+                  </div><!-- media-body -->
+                </div><!-- media -->
+              </div>
+              <!-- 7 -->
+               <div class="col-lg-3">
+                 <div class="media">
+                   <div class="media-left">
+                     <span class="circle-border">
+                       <span class="circle">
+                         7.
+                       </span>
+                     </span>
+                   </div><!-- media-left -->
+                   <div class="media-body">
+                     <h4 class="media-heading">Глянцевание</h4>
+                     <p></p>
+                   </div><!-- media-body -->
+                 </div><!-- media -->
+               </div>
+               <!-- 8 -->
+                <div class="col-lg-3">
+                  <div class="media">
+                    <div class="media-left">
+                      <span class="circle-border">
+                        <span class="circle">
+                          8.
+                        </span>
+                      </span>
+                    </div><!-- media-left -->
+                    <div class="media-body">
+                      <h4 class="media-heading">Уборка и вывоз мусора</h4>
+                      <p></p>
+                    </div><!-- media-body -->
+                  </div><!-- media -->
+                </div>
+       </div><!-- row -->
+     </div><!-- container -->
+
+   </section>
    
    
     <!-- Модальные окна -->
