--- a/src/index.html
+++ b/src/index.html
@@ -528,6 +528,62 @@
      </div><!-- container -->
 
    </section>
+
+   <section class="problems" >
+     <div class="container">
+       <div class="section-header">
+        <h2>Мы развеем все опасения</h2>
+       </div>
+       <div class="row">
+         <div class="col-lg-5 col-md-6">
+          <div class="problems-bad">
+            <h4 class="problems-h4-bad" >Какие могут быть проблемы :</h4>
+            <div class="problems-bad_1">
+              <img src="img/problems/bed.png" alt="">
+              <p>Стены и углы будут неровными</p>
+            </div>
+            <div class="problems-bad_2">
+              <img src="img/problems/bed.png" alt="">
+              <p>Ремонт затянется на долгие месяцы</p>
+            </div>
+            <div class="problems-bad_3">
+              <img src="img/problems/bed.png" alt="">
+              <p>Сложности с доставкой и разгрузкой материалов</p>
+            </div>
+            <div class="problems-bad_4">
+              <img src="img/problems/bed.png" alt="">
+              <p>Останется мусор и пыль после работ</p>
+            </div>
+          </div>
+         </div><!-- col-lg-5 -->
+
+         <div class="col-lg-5 col-lg-offset-2 col-md-6 col-md-offset-0">
+          <div class="problems-good">
+            <h4 class="problems-h4-good">Наше решение:</h4>
+            <div class="problems-good_1">
+              <img src="img/problems/good.png" alt="">
+              <p>Высокая квалификация специалистов + минимум 5 летний опыт рабо</p>
+            </div>
+            <div class="problems-good_2">
+              <img src="img/problems/good.png" alt="">
+              <p>Соблюдаем сроки, которые прописаны в договоре. На квартиру площадью 135 м2 уходит от 3 до 5 дней</p>
+            </div>
+            <div class="problems-good_3">
+              <img src="img/problems/good.png" alt="">
+              <p>Доставка материала и подъём бесплатно</p>
+            </div>
+            <div class="problems-good_4">
+              <img src="img/problems/good.png" alt="">
+              <p>Убираем и вывозим мусор после работ</p>
+            </div>
+          </div>
+         </div>
+       </div><div row -->
+         <div class="problems-women">
+           <img src="img/problems/women.png" alt="">
+         </div>
+     </div><!-- container -->
+   </section>
    
    
     <!-- Модальные окна -->
